fixed and modified swagger routes, functionality changes to include sources & comparisons
